<resources>
    <string name="app_name">MoodTracker</string>
    <string name="text_entries">Entries</string>
    <string name="text_stats">Stats</string>
    <string name="text_calendar">Calendar</string>
    <string name="text_more">More</string>
    <string name="text_add_entry">Add Entry</string>
    <string name="text_add_a_new_entry">Add a new entry</string>
    <string name="text_tell_us_about_your_mood">Tell us about your mood</string>
    <string name="text_what_have_you_been_up_to">What have you been up to?</string>
    <string name="text_oops_no_entry_found">Oops! No Entry Found</string>
    <string name="text_update">Update</string>
    <string name="text_delete">Delete</string>
    <string name="text_enter_mood_name">Enter mood name</string>
    <string name="text_edit_moods">Edit Moods</string>
    <string name="text_take_photo">Take Photo</string>
    <string name="text_choose_from_gallery">Choose from Gallery</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_add_photo">Add Photo!</string>
    <string name="text_required">Required</string>
    <string name="text_already_exist">Mood name already exists</string>
    <string name="text_select_any_image">Select any image</string>
    <string name="text_enter_username">Enter Username</string>
    <string name="text_permission_necessary">Permission necessary</string>
    <string name="text_external_permission_necessary">External storage permission is necessary</string>
    <string name="text_change_language">Change Language</string>
    <string name="text_add_new_mood">Add New Mood</string>
    <string name="text_news">News</string>
    <string name="text_hindi">Hindi</string>
    <string name="text_default">Default</string>
</resources>
